# dearprudence

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  python-publish.yaml  release-pypi.yaml  test.yaml
dearprudence/: __init__.py  core.py  errors.py  io.py  utils.py
src/dearprudence/: __init__.py  _version.py  core.py  errors.py  io.py  utils.py  validation.py
tests/: test_io.py
