[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
write_to = "src/dearprudence/_version.py"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "intake"
ignore_missing_imports = true
