[metadata]
name = dearprudence
author = Brewster Malevich
author_email = bmalevich@rhg.com
description = Internal Python library filled with sugar for swallowing downscalingCMIP6 parameter files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brews/dearprudence
project_urls =
    Bug Tracker = https://github.com/brews/dearprudence/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
ignore =
    E203
    E402
    E501
    W503
exclude=
    .eggs
